drm/msm: make sure to not queue up recovery more than once (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1856,6 +1856,7 @@
 	patches.kernel.org/6.17.8-468-drm-msm-adreno-Add-speedbins-for-A663-GPU.patch
 	patches.kernel.org/6.17.8-469-drm-msm-Fix-32b-size-truncation.patch
 	patches.kernel.org/6.17.8-470-dt-bindings-display-msm-gmu-Update-Adreno-623-.patch
+	patches.kernel.org/6.17.8-471-drm-msm-make-sure-to-not-queue-up-recovery-mor.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
