mmc: host: renesas_sdhi: Fix the actual clock (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1512,6 +1512,7 @@
 	patches.kernel.org/6.17.8-124-bpf-Don-t-use-pK-through-printk.patch
 	patches.kernel.org/6.17.8-125-mmc-sdhci-Disable-SD-card-clock-before-changin.patch
 	patches.kernel.org/6.17.8-126-pinctrl-single-fix-bias-pull-up-down-handling-.patch
+	patches.kernel.org/6.17.8-127-mmc-host-renesas_sdhi-Fix-the-actual-clock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
