NFSD: Define actions for the new time_deleg FATTR4 attributes (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1388,6 +1388,7 @@
 	patches.kernel.org/6.17.7-036-Linux-6.17.7.patch
 	patches.kernel.org/6.17.8-001-Revert-Bluetooth-L2CAP-convert-timeouts-to-sec.patch
 	patches.kernel.org/6.17.8-002-sched_ext-Mark-scx_bpf_dsq_move_set_-slice-vti.patch
+	patches.kernel.org/6.17.8-003-NFSD-Define-actions-for-the-new-time_deleg-FAT.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
