drm/amd/display: Update tiled to tiled copy command (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1615,6 +1615,7 @@
 	patches.kernel.org/6.17.8-227-mfd-intel-lpss-Add-Intel-Wildcat-Lake-LPSS-PCI.patch
 	patches.kernel.org/6.17.8-228-drm-xe-ptl-Apply-Wa_16026007364.patch
 	patches.kernel.org/6.17.8-229-drm-xe-configfs-Enforce-canonical-device-names.patch
+	patches.kernel.org/6.17.8-230-drm-amd-display-Update-tiled-to-tiled-copy-com.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
