platform/x86/intel-uncore-freq: Fix warning in partitioned system (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1767,6 +1767,7 @@
 	patches.kernel.org/6.17.8-379-net-Prevent-RPS-table-overwrite-of-active-flow.patch
 	patches.kernel.org/6.17.8-380-eth-fbnic-Reset-hw-stats-upon-PCI-error.patch
 	patches.kernel.org/6.17.8-381-wifi-iwlwifi-mld-trigger-mlo-scan-only-when-no.patch
+	patches.kernel.org/6.17.8-382-platform-x86-intel-uncore-freq-Fix-warning-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
