mips: lantiq: xway: sysctrl: rename stp clock (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1783,6 +1783,7 @@
 	patches.kernel.org/6.17.8-395-mips-lantiq-danube-add-missing-properties-to-c.patch
 	patches.kernel.org/6.17.8-396-mips-lantiq-danube-add-model-to-EASY50712-dts.patch
 	patches.kernel.org/6.17.8-397-mips-lantiq-danube-add-missing-device_type-in-.patch
+	patches.kernel.org/6.17.8-398-mips-lantiq-xway-sysctrl-rename-stp-clock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
