drm/tidss: Use the crtc_* timings when programming the HW (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1668,6 +1668,7 @@
 	patches.kernel.org/6.17.8-280-selftests-drv-net-devmem-flip-the-direction-of.patch
 	patches.kernel.org/6.17.8-281-media-pci-ivtv-Don-t-create-fake-v4l2_fh.patch
 	patches.kernel.org/6.17.8-282-media-amphion-Delete-v4l2_fh-synchronously-in-.patch
+	patches.kernel.org/6.17.8-283-drm-tidss-Use-the-crtc_-timings-when-programmi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
