net: phy: clear link parameters on admin link down (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1979,6 +1979,7 @@
 	patches.kernel.org/6.17.8-591-mei-make-a-local-copy-of-client-uuid-in-connec.patch
 	patches.kernel.org/6.17.8-592-drm-amdgpu-atom-Check-kcalloc-for-WS-buffer-in.patch
 	patches.kernel.org/6.17.8-593-ASoC-qcom-sc8280xp-explicitly-set-S16LE-format.patch
+	patches.kernel.org/6.17.8-594-net-phy-clear-link-parameters-on-admin-link-do.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
