--- a/series.conf
+++ b/series.conf
@@ -2014,6 +2014,7 @@
 	patches.kernel.org/6.17.8-626-drm-amd-display-change-dc-stream-color-setting.patch
 	patches.kernel.org/6.17.8-627-NFSv4-handle-ERR_GRACE-on-delegation-recalls.patch
 	patches.kernel.org/6.17.8-628-NFSv4.1-fix-mount-hang-after-CREATE_SESSION-fa.patch
+	patches.kernel.org/6.17.8-629-nfs4_setup_readdir-insufficient-locking-for-d_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
