drm/amd/display: Don't use non-registered VUPDATE on DCE 6 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1939,6 +1939,7 @@
 	patches.kernel.org/6.17.8-551-drm-amd-display-Set-up-pixel-encoding-for-YCBC.patch
 	patches.kernel.org/6.17.8-552-drm-amd-display-fix-dml-ms-order-of-operations.patch
 	patches.kernel.org/6.17.8-553-drm-amd-Avoid-evicting-resources-at-S5.patch
+	patches.kernel.org/6.17.8-554-drm-amd-display-Don-t-use-non-registered-VUPDA.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
