rtc: zynqmp: Restore alarm functionality after kexec transition (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2109,6 +2109,7 @@
 	patches.kernel.org/6.17.8-721-tools-lib-thermal-use-pkg-config-to-locate-lib.patch
 	patches.kernel.org/6.17.8-722-fbdev-Add-bounds-checking-in-bit_putcs-to-fix-.patch
 	patches.kernel.org/6.17.8-723-ALSA-hda-realtek-Add-quirk-for-ASUS-ROG-Zephyr.patch
+	patches.kernel.org/6.17.8-724-rtc-zynqmp-Restore-alarm-functionality-after-k.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
