--- a/series.conf
+++ b/series.conf
@@ -1489,6 +1489,7 @@
 	patches.kernel.org/6.17.8-101-drm-sched-Fix-race-in-drm_sched_entity_select_.patch
 	patches.kernel.org/6.17.8-102-drm-nouveau-Fix-race-in-nouveau_sched_fini.patch
 	patches.kernel.org/6.17.8-103-drm-mediatek-Fix-device-use-after-free-on-unbi.patch
+	patches.kernel.org/6.17.8-104-drm-i915-dmc-Clear-HRR-EVT_CTL-HTP-to-zero-on-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
