6pack: drop redundant locking and refcounting (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2055,6 +2055,7 @@
 	patches.kernel.org/6.17.8-667-net-stmmac-est-Drop-frames-causing-HLBS-error.patch
 	patches.kernel.org/6.17.8-668-exfat-limit-log-print-for-IO-error.patch
 	patches.kernel.org/6.17.8-669-exfat-validate-cluster-allocation-bits-of-the-.patch
+	patches.kernel.org/6.17.8-670-6pack-drop-redundant-locking-and-refcounting.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
