--- a/series.conf
+++ b/series.conf
@@ -1392,6 +1392,7 @@
 	patches.kernel.org/6.17.8-004-NFSD-Fix-crash-in-nfsd4_read_release.patch
 	patches.kernel.org/6.17.8-005-Revert-NFSD-Remove-the-cap-on-number-of-operat.patch
 	patches.kernel.org/6.17.8-006-net-usb-asix_devices-Check-return-value-of-usb.patch
+	patches.kernel.org/6.17.8-007-fbcon-Set-fb_display-i-mode-to-NULL-when-the-m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
