hwmon: (k10temp) Add thermal support for AMD Family 1Ah-based models (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1538,6 +1538,7 @@
 	patches.kernel.org/6.17.8-150-thermal-gov_step_wise-Allow-cooling-level-to-b.patch
 	patches.kernel.org/6.17.8-151-thermal-intel-selftests-workload_hint-Mask-uns.patch
 	patches.kernel.org/6.17.8-152-power-supply-qcom_battmgr-add-OOI-chemistry.patch
+	patches.kernel.org/6.17.8-153-hwmon-k10temp-Add-thermal-support-for-AMD-Fami.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
