--- a/series.conf
+++ b/series.conf
@@ -1710,6 +1710,7 @@
 	patches.kernel.org/6.17.8-322-ASoC-es8323-add-proper-left-right-mixer-contro.patch
 	patches.kernel.org/6.17.8-323-ASoC-Intel-avs-Do-not-share-the-name-pointer-b.patch
 	patches.kernel.org/6.17.8-324-ASoC-codecs-wsa883x-Handle-shared-reset-GPIO-f.patch
+	patches.kernel.org/6.17.8-325-drm-xe-Make-page-size-consistent-in-loop.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
