--- a/series.conf
+++ b/series.conf
@@ -1781,6 +1781,7 @@
 	patches.kernel.org/6.17.8-393-drm-amdgpu-Avoid-vcn-v5.0.1-poison-irq-call-tr.patch
 	patches.kernel.org/6.17.8-394-drm-amdgpu-Respect-max-pixel-clock-for-HDMI-an.patch
 	patches.kernel.org/6.17.8-395-mips-lantiq-danube-add-missing-properties-to-c.patch
+	patches.kernel.org/6.17.8-396-mips-lantiq-danube-add-model-to-EASY50712-dts.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
