net/mlx5e: Prevent entering switchdev mode with inconsistent netns (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2059,6 +2059,7 @@
 	patches.kernel.org/6.17.8-671-page_pool-Clamp-pool-size-to-max-16K-pages.patch
 	patches.kernel.org/6.17.8-672-orangefs-fix-xattr-related-buffer-overflow.patch
 	patches.kernel.org/6.17.8-673-ftrace-Fix-softlockup-in-ftrace_module_enable.patch
+	patches.kernel.org/6.17.8-674-net-mlx5e-Prevent-entering-switchdev-mode-with.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
