scsi: ufs: core: Initialize value of an attribute returned by uic cmd (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1429,6 +1429,7 @@
 	patches.kernel.org/6.17.8-041-wifi-nl80211-call-kfree-without-a-NULL-check.patch
 	patches.kernel.org/6.17.8-042-kunit-test_dev_action-Correctly-cast-priv-poin.patch
 	patches.kernel.org/6.17.8-043-bpf-Sync-pending-IRQ-work-before-freeing-ring-.patch
+	patches.kernel.org/6.17.8-044-scsi-ufs-core-Initialize-value-of-an-attribute.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
