drm/amdkfd: Don't clear PT after process killed (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2211,6 +2211,7 @@
 	patches.kernel.org/6.17.8-823-drm-nouveau-Advertise-correct-modifiers-on-GB2.patch
 	patches.kernel.org/6.17.8-824-drm-amdgpu-smu-Handle-S0ix-for-vangogh.patch
 	patches.kernel.org/6.17.8-825-drm-amd-display-Fix-NULL-deref-in-debugfs-odm_.patch
+	patches.kernel.org/6.17.8-826-drm-amdkfd-Don-t-clear-PT-after-process-killed.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
