remoteproc: qcom: q6v5: Avoid handling handover twice (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1999,6 +1999,7 @@
 	patches.kernel.org/6.17.8-611-ASoC-ops-improve-snd_soc_get_volsw.patch
 	patches.kernel.org/6.17.8-612-PCI-PM-Skip-resuming-to-D0-if-device-is-discon.patch
 	patches.kernel.org/6.17.8-613-selftests-forwarding-Reorder-ar-ping-arguments.patch
+	patches.kernel.org/6.17.8-614-remoteproc-qcom-q6v5-Avoid-handling-handover-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
