--- a/series.conf
+++ b/series.conf
@@ -1877,6 +1877,7 @@
 	patches.kernel.org/6.17.8-489-drm-amdgpu-validate-userq-input-args.patch
 	patches.kernel.org/6.17.8-490-selftests-mptcp-join-allow-more-time-to-send-A.patch
 	patches.kernel.org/6.17.8-491-scsi-ufs-host-mediatek-Enhance-recovery-on-res.patch
+	patches.kernel.org/6.17.8-492-scsi-ufs-ufs-qcom-Align-programming-sequence-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
