netfilter: nf_reject: don't reply to icmp error messages (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1900,6 +1900,7 @@
 	patches.kernel.org/6.17.8-512-selftests-traceroute-Use-require_command.patch
 	patches.kernel.org/6.17.8-513-selftests-traceroute-Return-correct-value-on-f.patch
 	patches.kernel.org/6.17.8-514-openrisc-Add-R_OR1K_32_PCREL-relocation-type-m.patch
+	patches.kernel.org/6.17.8-515-netfilter-nf_reject-don-t-reply-to-icmp-error-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
