arm64: versal-net: Update rtc calibration value (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1525,6 +1525,7 @@
 	patches.kernel.org/6.17.8-137-ACPI-video-force-native-for-Lenovo-82K8.patch
 	patches.kernel.org/6.17.8-138-libbpf-Fix-USDT-SIB-argument-handling-causing-.patch
 	patches.kernel.org/6.17.8-139-selftests-bpf-Fix-bpf_prog_detach2-usage-in-te.patch
+	patches.kernel.org/6.17.8-140-arm64-versal-net-Update-rtc-calibration-value.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
