--- a/series.conf
+++ b/series.conf
@@ -1945,6 +1945,7 @@
 	patches.kernel.org/6.17.8-557-drm-amd-display-Disable-VRR-on-DCE-6.patch
 	patches.kernel.org/6.17.8-558-drm-amd-display-dml2-Guard-dml21_map_dc_state_.patch
 	patches.kernel.org/6.17.8-559-net-phy-clear-EEE-runtime-state-in-PHY_HALTED-.patch
+	patches.kernel.org/6.17.8-560-page_pool-always-add-GFP_NOWARN-for-ATOMIC-all.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
