PCI/PM: Skip resuming to D0 if device is disconnected (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1997,6 +1997,7 @@
 	patches.kernel.org/6.17.8-609-crypto-hisilicon-qm-invalidate-queues-in-use.patch
 	patches.kernel.org/6.17.8-610-crypto-hisilicon-qm-clear-all-VF-configuration.patch
 	patches.kernel.org/6.17.8-611-ASoC-ops-improve-snd_soc_get_volsw.patch
+	patches.kernel.org/6.17.8-612-PCI-PM-Skip-resuming-to-D0-if-device-is-discon.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
