media: redrat3: use int type to store negative error codes (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1895,6 +1895,7 @@
 	patches.kernel.org/6.17.8-507-drm-msm-registers-Generate-_HI-LO-builders-for.patch
 	patches.kernel.org/6.17.8-508-net-sh_eth-Disable-WoL-if-system-can-not-suspe.patch
 	patches.kernel.org/6.17.8-509-selftests-net-replace-sleeps-in-fcnal-test-wit.patch
+	patches.kernel.org/6.17.8-510-media-redrat3-use-int-type-to-store-negative-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
