--- a/series.conf
+++ b/series.conf
@@ -2155,6 +2155,7 @@
 	patches.kernel.org/6.17.8-767-net-mdio-Check-regmap-pointer-returned-by-devi.patch
 	patches.kernel.org/6.17.8-768-net-dsa-b53-fix-resetting-speed-and-pause-on-f.patch
 	patches.kernel.org/6.17.8-769-net-dsa-b53-fix-bcm63xx-RGMII-port-link-adjust.patch
+	patches.kernel.org/6.17.8-770-net-dsa-b53-fix-enabling-ip-multicast.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
