mfd: stmpe-i2c: Add missing MODULE_LICENSE (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1604,6 +1604,7 @@
 	patches.kernel.org/6.17.8-216-tools-power-x86_energy_perf_policy-Prefer-driv.patch
 	patches.kernel.org/6.17.8-217-mfd-simple-mfd-i2c-Add-compatible-strings-for-.patch
 	patches.kernel.org/6.17.8-218-mfd-stmpe-Remove-IRQ-domain-upon-removal.patch
+	patches.kernel.org/6.17.8-219-mfd-stmpe-i2c-Add-missing-MODULE_LICENSE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
