i3c: mipi-i3c-hci-pci: Add support for Intel Wildcat Lake-U I3C (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1568,6 +1568,7 @@
 	patches.kernel.org/6.17.8-180-kunit-Enable-PCI-on-UML-without-triggering-WAR.patch
 	patches.kernel.org/6.17.8-181-selftests-bpf-Fix-arena_spin_lock-selftest-fai.patch
 	patches.kernel.org/6.17.8-182-bpf-Do-not-limit-bpf_cgroup_from_id-to-current.patch
+	patches.kernel.org/6.17.8-183-i3c-mipi-i3c-hci-pci-Add-support-for-Intel-Wil.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
