--- a/series.conf
+++ b/series.conf
@@ -1764,6 +1764,7 @@
 	patches.kernel.org/6.17.8-376-drm-amd-display-Consider-sink-max-slice-width-.patch
 	patches.kernel.org/6.17.8-377-drm-amdgpu-vpe-cancel-delayed-work-in-hw_fini.patch
 	patches.kernel.org/6.17.8-378-drm-xe-Cancel-pending-TLB-inval-workers-on-tea.patch
+	patches.kernel.org/6.17.8-379-net-Prevent-RPS-table-overwrite-of-active-flow.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
