netpoll: Fix deadlock in memory allocation under spinlock (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2170,6 +2170,7 @@
 	patches.kernel.org/6.17.8-782-bnxt_en-Fix-null-pointer-dereference-in-bnxt_b.patch
 	patches.kernel.org/6.17.8-783-bnxt_en-Always-provide-max-entry-and-entry-siz.patch
 	patches.kernel.org/6.17.8-784-bnxt_en-Fix-warning-in-bnxt_dl_reload_down.patch
+	patches.kernel.org/6.17.8-785-netpoll-Fix-deadlock-in-memory-allocation-unde.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
