--- a/series.conf
+++ b/series.conf
@@ -1682,6 +1682,7 @@
 	patches.kernel.org/6.17.8-294-thunderbolt-Use-is_pciehp-instead-of-is_hotplu.patch
 	patches.kernel.org/6.17.8-295-tty-serial-ip22zilog-Use-platform-device-for-p.patch
 	patches.kernel.org/6.17.8-296-ASoC-es8323-enable-DAPM-power-widgets-for-play.patch
+	patches.kernel.org/6.17.8-297-powerpc-eeh-Use-result-of-error_detected-in-ue.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
