--- a/series.conf
+++ b/series.conf
@@ -1829,6 +1829,7 @@
 	patches.kernel.org/6.17.8-441-drm-xe-guc-Set-upper-limit-of-H2G-retries-over.patch
 	patches.kernel.org/6.17.8-442-net-call-cond_resched-less-often-in-__release_.patch
 	patches.kernel.org/6.17.8-443-smsc911x-add-second-read-of-EEPROM-mac-when-po.patch
+	patches.kernel.org/6.17.8-444-drm-gpusvm-fix-hmm_pfn_to_map_order-usage.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
