nvmet-fc: avoid scheduling association deletion twice (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1563,6 +1563,7 @@
 	patches.kernel.org/6.17.8-175-pwm-pca9685-Use-bulk-write-to-atomicially-upda.patch
 	patches.kernel.org/6.17.8-176-ACPICA-dispatcher-Use-acpi_ds_clear_operands-i.patch
 	patches.kernel.org/6.17.8-177-tee-allow-a-driver-to-allocate-a-tee_device-wi.patch
+	patches.kernel.org/6.17.8-178-nvmet-fc-avoid-scheduling-association-deletion.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
