perf/core: Fix system hang caused by cpu-clock usage (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2202,6 +2202,7 @@
 	patches.kernel.org/6.17.8-814-smb-client-validate-change-notify-buffer-befor.patch
 	patches.kernel.org/6.17.8-815-io_uring-fix-regbuf-vector-size-truncation.patch
 	patches.kernel.org/6.17.8-816-smb-client-fix-potential-UAF-in-smb2_close_cac.patch
+	patches.kernel.org/6.17.8-817-perf-core-Fix-system-hang-caused-by-cpu-clock-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
