--- a/series.conf
+++ b/series.conf
@@ -2047,6 +2047,7 @@
 	patches.kernel.org/6.17.8-659-Bluetooth-btusb-Add-new-VID-PID-13d3-3627-for-.patch
 	patches.kernel.org/6.17.8-660-Bluetooth-btintel_pcie-Define-hdev-wakeup-call.patch
 	patches.kernel.org/6.17.8-661-Bluetooth-ISO-Don-t-initiate-CIS-connections-i.patch
+	patches.kernel.org/6.17.8-662-Bluetooth-btusb-Check-for-unexpected-bytes-whe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
