drm/amdgpu: Avoid jpeg v5.0.1 poison irq call trace on sriov guest (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1776,6 +1776,7 @@
 	patches.kernel.org/6.17.8-388-ASoC-SOF-ipc4-pcm-Add-fixup-for-channels.patch
 	patches.kernel.org/6.17.8-389-drm-amdgpu-Notify-pmfw-bad-page-threshold-exce.patch
 	patches.kernel.org/6.17.8-390-drm-amd-display-Increase-minimum-clock-for-TMD.patch
+	patches.kernel.org/6.17.8-391-drm-amdgpu-Avoid-jpeg-v5.0.1-poison-irq-call-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
