--- a/series.conf
+++ b/series.conf
@@ -1649,6 +1649,7 @@
 	patches.kernel.org/6.17.8-261-drm-nouveau-replace-snprintf-with-scnprintf-in.patch
 	patches.kernel.org/6.17.8-262-ASoC-tas2781-Add-keyword-init-in-profile-secti.patch
 	patches.kernel.org/6.17.8-263-ASoC-mediatek-Use-SND_JACK_AVOUT-for-HDMI-DP-j.patch
+	patches.kernel.org/6.17.8-264-drm-amd-display-Reset-apply_eamless_boot_optim.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
