ASoC: renesas: rz-ssi: Use proper dma_buffer_pos after resume (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1408,6 +1408,7 @@
 	patches.kernel.org/6.17.8-020-mptcp-drop-bogus-optimization-in-__mptcp_check.patch
 	patches.kernel.org/6.17.8-021-mptcp-restore-window-probe.patch
 	patches.kernel.org/6.17.8-022-ASoC-qdsp6-q6asm-do-not-sleep-while-atomic.patch
+	patches.kernel.org/6.17.8-023-ASoC-renesas-rz-ssi-Use-proper-dma_buffer_pos-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
