--- a/series.conf
+++ b/series.conf
@@ -1629,6 +1629,7 @@
 	patches.kernel.org/6.17.8-241-drm-xe-Fix-oops-in-xe_gem_fault-when-running-c.patch
 	patches.kernel.org/6.17.8-242-drm-xe-pf-Don-t-resume-device-from-restart-wor.patch
 	patches.kernel.org/6.17.8-243-drm-amdgpu-Fix-build-error-when-CONFIG_SUSPEND.patch
+	patches.kernel.org/6.17.8-244-drm-amdgpu-Update-IPID-value-for-bad-page-thre.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
