--- a/series.conf
+++ b/series.conf
@@ -1653,6 +1653,7 @@
 	patches.kernel.org/6.17.8-265-drm-amdgpu-add-to-custom-amdgpu_drm_release-dr.patch
 	patches.kernel.org/6.17.8-266-drm-amd-display-Wait-until-OTG-enable-state-is.patch
 	patches.kernel.org/6.17.8-267-drm-xe-rework-PDE-PAT-index-selection.patch
+	patches.kernel.org/6.17.8-268-docs-kernel-doc-avoid-script-crash-on-ancient-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
