net: stmmac: est: Drop frames causing HLBS error (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2052,6 +2052,7 @@
 	patches.kernel.org/6.17.8-664-Bluetooth-SCO-Fix-UAF-on-sco_conn_free.patch
 	patches.kernel.org/6.17.8-665-Bluetooth-btusb-Add-new-VID-PID-13d3-3633-for-.patch
 	patches.kernel.org/6.17.8-666-Bluetooth-bcsp-receive-data-only-if-registered.patch
+	patches.kernel.org/6.17.8-667-net-stmmac-est-Drop-frames-causing-HLBS-error.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
