--- a/series.conf
+++ b/series.conf
@@ -1672,6 +1672,7 @@
 	patches.kernel.org/6.17.8-284-drm-bridge-cdns-dsi-Fix-REG_WAKEUP_TIME-value.patch
 	patches.kernel.org/6.17.8-285-drm-bridge-cdns-dsi-Don-t-fail-on-MIPI_DSI_MOD.patch
 	patches.kernel.org/6.17.8-286-drm-tidss-Set-crtc-modesetting-parameters-with.patch
+	patches.kernel.org/6.17.8-287-drm-tidss-Remove-early-fb.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
