PCI: endpoint: pci-epf-test: Limit PCIe BAR size for fixed BARs (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1863,6 +1863,7 @@
 	patches.kernel.org/6.17.8-475-drm-msm-a6xx-Switch-to-GMU-AO-counter.patch
 	patches.kernel.org/6.17.8-476-idpf-link-NAPIs-to-queues.patch
 	patches.kernel.org/6.17.8-477-selftests-net-make-the-dump-test-less-sensitiv.patch
+	patches.kernel.org/6.17.8-478-PCI-endpoint-pci-epf-test-Limit-PCIe-BAR-size-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
