tools: ynl-gen: validate nested arrays (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1951,6 +1951,7 @@
 	patches.kernel.org/6.17.8-563-HID-i2c-hid-Resolve-touchpad-issues-on-Dell-sy.patch
 	patches.kernel.org/6.17.8-564-hinic3-Queue-pair-endianness-improvements.patch
 	patches.kernel.org/6.17.8-565-hinic3-Fix-missing-napi-dev-in-netif_queue_set.patch
+	patches.kernel.org/6.17.8-566-tools-ynl-gen-validate-nested-arrays.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
