drm/amd/display: fix dmub access race condition (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1639,6 +1639,7 @@
 	patches.kernel.org/6.17.8-251-drm-amd-display-add-more-cyan-skillfish-device.patch
 	patches.kernel.org/6.17.8-252-drm-amdgpu-Initialize-jpeg-v5_0_1-ras-function.patch
 	patches.kernel.org/6.17.8-253-drm-amdgpu-skip-mgpu-fan-boost-for-multi-vf.patch
+	patches.kernel.org/6.17.8-254-drm-amd-display-fix-dmub-access-race-condition.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
