--- a/series.conf
+++ b/series.conf
@@ -1874,6 +1874,7 @@
 	patches.kernel.org/6.17.8-486-drm-bridge-write-full-Audio-InfoFrame.patch
 	patches.kernel.org/6.17.8-487-drm-xe-guc-Always-add-CT-disable-action-during.patch
 	patches.kernel.org/6.17.8-488-f2fs-fix-wrong-layout-information-on-16KB-page.patch
+	patches.kernel.org/6.17.8-489-drm-amdgpu-validate-userq-input-args.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
