drm/nouveau: Fix race in nouveau_sched_fini() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1487,6 +1487,7 @@
 	patches.kernel.org/6.17.8-099-drm-sysfb-Do-not-dereference-NULL-pointer-in-p.patch
 	patches.kernel.org/6.17.8-100-drm-sched-avoid-killing-parent-entity-on-child.patch
 	patches.kernel.org/6.17.8-101-drm-sched-Fix-race-in-drm_sched_entity_select_.patch
+	patches.kernel.org/6.17.8-102-drm-nouveau-Fix-race-in-nouveau_sched_fini.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
