--- a/series.conf
+++ b/series.conf
@@ -1587,6 +1587,7 @@
 	patches.kernel.org/6.17.8-199-clocksource-drivers-vf-pit-Replace-raw_readl-w.patch
 	patches.kernel.org/6.17.8-200-clocksource-drivers-timer-rtl-otto-Work-around.patch
 	patches.kernel.org/6.17.8-201-clocksource-drivers-timer-rtl-otto-Do-not-inte.patch
+	patches.kernel.org/6.17.8-202-blk-cgroup-fix-possible-deadlock-while-configu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
