--- a/series.conf
+++ b/series.conf
@@ -1712,6 +1712,7 @@
 	patches.kernel.org/6.17.8-324-ASoC-codecs-wsa883x-Handle-shared-reset-GPIO-f.patch
 	patches.kernel.org/6.17.8-325-drm-xe-Make-page-size-consistent-in-loop.patch
 	patches.kernel.org/6.17.8-326-wifi-rtw89-wow-remove-notify-during-WoWLAN-net.patch
+	patches.kernel.org/6.17.8-327-wifi-rtw89-fix-BSSID-comparison-for-non-transm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
