Bluetooth: ISO: Don't initiate CIS connections if there are no buffers (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2046,6 +2046,7 @@
 	patches.kernel.org/6.17.8-658-net-macb-avoid-dealing-with-endianness-in-macb.patch
 	patches.kernel.org/6.17.8-659-Bluetooth-btusb-Add-new-VID-PID-13d3-3627-for-.patch
 	patches.kernel.org/6.17.8-660-Bluetooth-btintel_pcie-Define-hdev-wakeup-call.patch
+	patches.kernel.org/6.17.8-661-Bluetooth-ISO-Don-t-initiate-CIS-connections-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
