Bluetooth: MGMT: Fix OOB access in parse_adv_monitor_pattern() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2193,6 +2193,7 @@
 	patches.kernel.org/6.17.8-805-wifi-mac80211-use-wiphy_hrtimer_work-for-csa.s.patch
 	patches.kernel.org/6.17.8-806-fscrypt-fix-left-shift-underflow-when-inode-i_.patch
 	patches.kernel.org/6.17.8-807-drm-sched-Fix-deadlock-in-drm_sched_entity_kil.patch
+	patches.kernel.org/6.17.8-808-Bluetooth-MGMT-Fix-OOB-access-in-parse_adv_mon.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
