--- a/series.conf
+++ b/series.conf
@@ -1555,6 +1555,7 @@
 	patches.kernel.org/6.17.8-167-arm64-zynqmp-Revert-usb-node-drive-strength-an.patch
 	patches.kernel.org/6.17.8-168-soc-tegra-fuse-Add-Tegra114-nvmem-cells-and-fu.patch
 	patches.kernel.org/6.17.8-169-ARM-tegra-p880-set-correct-touchscreen-clippin.patch
+	patches.kernel.org/6.17.8-170-ARM-tegra-transformer-20-add-missing-magnetome.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
