--- a/series.conf
+++ b/series.conf
@@ -1758,6 +1758,7 @@
 	patches.kernel.org/6.17.8-370-drm-amdgpu-Correct-the-loss-of-aca-bank-reg-in.patch
 	patches.kernel.org/6.17.8-371-drm-amdgpu-Correct-the-counts-of-nr_banks-and-.patch
 	patches.kernel.org/6.17.8-372-drm-amdkfd-fix-vram-allocation-failure-for-a-s.patch
+	patches.kernel.org/6.17.8-373-drm-amd-display-Support-HW-cursor-180-rot-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
