--- a/series.conf
+++ b/series.conf
@@ -1846,6 +1846,7 @@
 	patches.kernel.org/6.17.8-458-drm-amd-pm-refine-amdgpu-pm-sysfs-node-error-c.patch
 	patches.kernel.org/6.17.8-459-drm-amd-display-Indicate-when-custom-brightnes.patch
 	patches.kernel.org/6.17.8-460-selftests-ncdevmem-don-t-retry-EFAULT.patch
+	patches.kernel.org/6.17.8-461-net-dsa-felix-support-phy-mode-10g-qxgmii.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
