--- a/series.conf
+++ b/series.conf
@@ -1593,6 +1593,7 @@
 	patches.kernel.org/6.17.8-205-selftests-drv-net-Pull-data-before-parsing-hea.patch
 	patches.kernel.org/6.17.8-206-nvme-Use-non-zero-KATO-for-persistent-discover.patch
 	patches.kernel.org/6.17.8-207-uprobe-Do-not-emulate-sstep-original-instructi.patch
+	patches.kernel.org/6.17.8-208-hwmon-asus-ec-sensors-increase-timeout-for-loc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
