wifi: mt76: mt7996: disable promiscuous mode by default (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1929,6 +1929,7 @@
 	patches.kernel.org/6.17.8-541-wifi-mt76-mt76_eeprom_override-to-int.patch
 	patches.kernel.org/6.17.8-542-ALSA-serial-generic-remove-shared-static-buffe.patch
 	patches.kernel.org/6.17.8-543-wifi-mt76-mt7996-fix-memory-leak-on-mt7996_mcu.patch
+	patches.kernel.org/6.17.8-544-wifi-mt76-mt7996-disable-promiscuous-mode-by-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
