PCI: cadence: Check for the existence of cdns_pcie::ops before using it (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1989,6 +1989,7 @@
 	patches.kernel.org/6.17.8-601-wifi-mac80211-Track-NAN-interface-start-stop.patch
 	patches.kernel.org/6.17.8-602-net-intel-fm10k-Fix-parameter-idx-set-but-not-.patch
 	patches.kernel.org/6.17.8-603-r8169-set-EEE-speed-down-ratio-to-1.patch
+	patches.kernel.org/6.17.8-604-PCI-cadence-Check-for-the-existence-of-cdns_pc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
