--- a/series.conf
+++ b/series.conf
@@ -2215,6 +2215,7 @@
 	patches.kernel.org/6.17.8-827-virtio-net-fix-received-length-check-in-big-pa.patch
 	patches.kernel.org/6.17.8-828-virtio_net-fix-alignment-for-virtio_net_hdr_v1.patch
 	patches.kernel.org/6.17.8-829-lib-crypto-curve25519-hacl64-Fix-older-clang-K.patch
+	patches.kernel.org/6.17.8-830-scsi-ufs-ufs-pci-Fix-S0ix-S3-for-Intel-control.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
