amd/amdkfd: resolve a race in amdgpu_amdkfd_device_fini_sw (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2030,6 +2030,7 @@
 	patches.kernel.org/6.17.8-642-ASoC-renesas-msiof-set-SIFCTR-register.patch
 	patches.kernel.org/6.17.8-643-fs-ext4-change-GFP_KERNEL-to-GFP_NOFS-to-avoid.patch
 	patches.kernel.org/6.17.8-644-ext4-increase-IO-priority-of-fastcommit.patch
+	patches.kernel.org/6.17.8-645-amd-amdkfd-resolve-a-race-in-amdgpu_amdkfd_dev.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
