xfs: fix delalloc write failures in software-provided atomic writes (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2204,6 +2204,7 @@
 	patches.kernel.org/6.17.8-816-smb-client-fix-potential-UAF-in-smb2_close_cac.patch
 	patches.kernel.org/6.17.8-817-perf-core-Fix-system-hang-caused-by-cpu-clock-.patch
 	patches.kernel.org/6.17.8-818-x86-amd_node-Fix-AMD-root-device-caching.patch
+	patches.kernel.org/6.17.8-819-xfs-fix-delalloc-write-failures-in-software-pr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
