mptcp: leverage skb deferral free (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1495,6 +1495,7 @@
 	patches.kernel.org/6.17.8-107-drm-amd-display-Fix-incorrect-return-of-vblank.patch
 	patches.kernel.org/6.17.8-108-drm-amd-display-Don-t-program-BLNDGAM_MEM_PWR_.patch
 	patches.kernel.org/6.17.8-109-drm-amd-display-Add-HDR-workaround-for-a-speci.patch
+	patches.kernel.org/6.17.8-110-mptcp-leverage-skb-deferral-free.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
