spi: rpc-if: Add resume support for RZ/G3E (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1582,6 +1582,7 @@
 	patches.kernel.org/6.17.8-194-futex-Don-t-leak-robust_list-pointer-on-exec-r.patch
 	patches.kernel.org/6.17.8-195-selftests-bpf-Fix-selftest-verifier_arena_larg.patch
 	patches.kernel.org/6.17.8-196-selftests-ublk-fix-behavior-when-fio-is-not-in.patch
+	patches.kernel.org/6.17.8-197-spi-rpc-if-Add-resume-support-for-RZ-G3E.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
