net: ethernet: microchip: sparx5: make it selectable for ARCH_LAN969X (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1980,6 +1980,7 @@
 	patches.kernel.org/6.17.8-592-drm-amdgpu-atom-Check-kcalloc-for-WS-buffer-in.patch
 	patches.kernel.org/6.17.8-593-ASoC-qcom-sc8280xp-explicitly-set-S16LE-format.patch
 	patches.kernel.org/6.17.8-594-net-phy-clear-link-parameters-on-admin-link-do.patch
+	patches.kernel.org/6.17.8-595-net-ethernet-microchip-sparx5-make-it-selectab.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
