block: fix op_is_zone_mgmt() to handle REQ_OP_ZONE_RESET_ALL (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1473,6 +1473,7 @@
 	patches.kernel.org/6.17.8-085-drm-amdgpu-fix-SPDX-header-on-amd_cper.h.patch
 	patches.kernel.org/6.17.8-086-drm-amdgpu-fix-SPDX-header-on-irqsrcs_vcn_5_0..patch
 	patches.kernel.org/6.17.8-087-ACPI-fan-Use-ACPI-handle-when-retrieving-_FST.patch
+	patches.kernel.org/6.17.8-088-block-fix-op_is_zone_mgmt-to-handle-REQ_OP_ZON.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
