--- a/series.conf
+++ b/series.conf
@@ -1771,6 +1771,7 @@
 	patches.kernel.org/6.17.8-383-drm-msm-dpu-Filter-modes-based-on-adjusted-mod.patch
 	patches.kernel.org/6.17.8-384-drm-msm-Use-of_reserved_mem_region_to_resource.patch
 	patches.kernel.org/6.17.8-385-selftests-drv-net-rss_ctx-fix-the-queue-count-.patch
+	patches.kernel.org/6.17.8-386-media-fix-uninitialized-symbol-warnings.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
