--- a/series.conf
+++ b/series.conf
@@ -1480,6 +1480,7 @@
 	patches.kernel.org/6.17.8-092-perf-x86-intel-Fix-KASAN-global-out-of-bounds-.patch
 	patches.kernel.org/6.17.8-093-regmap-slimbus-fix-bus_context-pointer-in-regm.patch
 	patches.kernel.org/6.17.8-094-regmap-irq-Correct-documentation-of-wake_inver.patch
+	patches.kernel.org/6.17.8-095-s390-pci-Avoid-deadlock-between-PCI-error-reco.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
