--- a/series.conf
+++ b/series.conf
@@ -2032,6 +2032,7 @@
 	patches.kernel.org/6.17.8-644-ext4-increase-IO-priority-of-fastcommit.patch
 	patches.kernel.org/6.17.8-645-amd-amdkfd-resolve-a-race-in-amdgpu_amdkfd_dev.patch
 	patches.kernel.org/6.17.8-646-drm-amdgpu-Add-fallback-to-pipe-reset-if-KCQ-r.patch
+	patches.kernel.org/6.17.8-647-drm-amdgpu-Fix-fence-signaling-race-condition-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
