--- a/series.conf
+++ b/series.conf
@@ -1658,6 +1658,7 @@
 	patches.kernel.org/6.17.8-270-PCI-Disable-MSI-on-RDC-PCI-to-PCIe-bridges.patch
 	patches.kernel.org/6.17.8-271-drm-nouveau-always-set-RMDevidCheckIgnore-for-.patch
 	patches.kernel.org/6.17.8-272-drm-panel-edp-Add-SHP-LQ134Z1-panel-for-Dell-X.patch
+	patches.kernel.org/6.17.8-273-selftests-net-Replace-non-standard-__WORDSIZE-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
