ipv6: np->rxpmtu race annotation (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1970,6 +1970,7 @@
 	patches.kernel.org/6.17.8-582-wifi-rtw89-obtain-RX-path-from-ppdu-status-IE0.patch
 	patches.kernel.org/6.17.8-583-wifi-rtw89-renew-a-completion-for-each-H2C-com.patch
 	patches.kernel.org/6.17.8-584-usb-xhci-pci-add-support-for-hosts-with-zero-U.patch
+	patches.kernel.org/6.17.8-585-ipv6-np-rxpmtu-race-annotation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
