PCI/P2PDMA: Fix incorrect pointer usage in devm_kfree() call (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1722,6 +1722,7 @@
 	patches.kernel.org/6.17.8-334-net-Call-trace_sock_exceed_buf_limit-for-memcg.patch
 	patches.kernel.org/6.17.8-335-dmaengine-idxd-Add-a-new-IAA-device-ID-for-Wil.patch
 	patches.kernel.org/6.17.8-336-f2fs-fix-to-detect-potential-corrupted-nid-in-.patch
+	patches.kernel.org/6.17.8-337-PCI-P2PDMA-Fix-incorrect-pointer-usage-in-devm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
