--- a/series.conf
+++ b/series.conf
@@ -1567,6 +1567,7 @@
 	patches.kernel.org/6.17.8-179-nvme-fc-use-lock-accessing-port_state-and-rpor.patch
 	patches.kernel.org/6.17.8-180-kunit-Enable-PCI-on-UML-without-triggering-WAR.patch
 	patches.kernel.org/6.17.8-181-selftests-bpf-Fix-arena_spin_lock-selftest-fai.patch
+	patches.kernel.org/6.17.8-182-bpf-Do-not-limit-bpf_cgroup_from_id-to-current.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
