thunderbolt: Use is_pciehp instead of is_hotplug_bridge (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1679,6 +1679,7 @@
 	patches.kernel.org/6.17.8-291-x86-vsyscall-Do-not-require-X86_PF_INSTR-to-em.patch
 	patches.kernel.org/6.17.8-292-net-stmmac-Check-stmmac_hw_setup-in-stmmac_res.patch
 	patches.kernel.org/6.17.8-293-ice-Don-t-use-pK-through-printk-or-tracepoints.patch
+	patches.kernel.org/6.17.8-294-thunderbolt-Use-is_pciehp-instead-of-is_hotplu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
