--- a/series.conf
+++ b/series.conf
@@ -1535,6 +1535,7 @@
 	patches.kernel.org/6.17.8-147-ACPI-PRM-Skip-handlers-with-NULL-handler_addre.patch
 	patches.kernel.org/6.17.8-148-ACPI-resource-Skip-IRQ-override-on-ASUS-Vivobo.patch
 	patches.kernel.org/6.17.8-149-ACPI-scan-Add-Intel-CVS-ACPI-HIDs-to-acpi_igno.patch
+	patches.kernel.org/6.17.8-150-thermal-gov_step_wise-Allow-cooling-level-to-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
