drm/amdgpu: Correct the counts of nr_banks and nr_errors (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1756,6 +1756,7 @@
 	patches.kernel.org/6.17.8-368-drm-xe-Ensure-GT-is-in-C0-during-resumes.patch
 	patches.kernel.org/6.17.8-369-misc-pci_endpoint_test-Skip-IRQ-tests-if-irq-i.patch
 	patches.kernel.org/6.17.8-370-drm-amdgpu-Correct-the-loss-of-aca-bank-reg-in.patch
+	patches.kernel.org/6.17.8-371-drm-amdgpu-Correct-the-counts-of-nr_banks-and-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
