--- a/series.conf
+++ b/series.conf
@@ -1486,6 +1486,7 @@
 	patches.kernel.org/6.17.8-098-drm-xe-Do-not-wake-device-during-a-GT-reset.patch
 	patches.kernel.org/6.17.8-099-drm-sysfb-Do-not-dereference-NULL-pointer-in-p.patch
 	patches.kernel.org/6.17.8-100-drm-sched-avoid-killing-parent-entity-on-child.patch
+	patches.kernel.org/6.17.8-101-drm-sched-Fix-race-in-drm_sched_entity_select_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
