--- a/series.conf
+++ b/series.conf
@@ -1705,6 +1705,7 @@
 	patches.kernel.org/6.17.8-317-hwrng-timeriomem-Use-us_to_ktime-where-appropr.patch
 	patches.kernel.org/6.17.8-318-iio-adc-spear_adc-mask-SPEAR_ADC_STATUS-channe.patch
 	patches.kernel.org/6.17.8-319-iio-adc-imx93_adc-load-calibrated-values-even-.patch
+	patches.kernel.org/6.17.8-320-usb-gadget-f_ncm-Fix-MAC-assignment-NCM-ethern.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
