--- a/series.conf
+++ b/series.conf
@@ -1720,6 +1720,7 @@
 	patches.kernel.org/6.17.8-332-net-When-removing-nexthops-don-t-call-synchron.patch
 	patches.kernel.org/6.17.8-333-net-stmmac-Correctly-handle-Rx-checksum-offloa.patch
 	patches.kernel.org/6.17.8-334-net-Call-trace_sock_exceed_buf_limit-for-memcg.patch
+	patches.kernel.org/6.17.8-335-dmaengine-idxd-Add-a-new-IAA-device-ID-for-Wil.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
