selftests/bpf: Fix arena_spin_lock selftest failure (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1566,6 +1566,7 @@
 	patches.kernel.org/6.17.8-178-nvmet-fc-avoid-scheduling-association-deletion.patch
 	patches.kernel.org/6.17.8-179-nvme-fc-use-lock-accessing-port_state-and-rpor.patch
 	patches.kernel.org/6.17.8-180-kunit-Enable-PCI-on-UML-without-triggering-WAR.patch
+	patches.kernel.org/6.17.8-181-selftests-bpf-Fix-arena_spin_lock-selftest-fai.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
