net: vlan: sync VLAN features with lower device (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2148,6 +2148,7 @@
 	patches.kernel.org/6.17.8-760-selftests-net-fix-out-of-order-delivery-of-FIN.patch
 	patches.kernel.org/6.17.8-761-selftests-net-use-destination-options-instead-.patch
 	patches.kernel.org/6.17.8-762-selftests-netdevsim-Fix-ethtool-coalesce.sh-fa.patch
+	patches.kernel.org/6.17.8-763-net-vlan-sync-VLAN-features-with-lower-device.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
