--- a/series.conf
+++ b/series.conf
@@ -1976,6 +1976,7 @@
 	patches.kernel.org/6.17.8-588-bnxt_en-Add-fw-log-trace-support-for-5731X-574.patch
 	patches.kernel.org/6.17.8-589-jfs-Verify-inode-mode-when-loading-from-disk.patch
 	patches.kernel.org/6.17.8-590-jfs-fix-uninitialized-waitqueue-in-transaction.patch
+	patches.kernel.org/6.17.8-591-mei-make-a-local-copy-of-client-uuid-in-connec.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
