--- a/series.conf
+++ b/series.conf
@@ -1928,6 +1928,7 @@
 	patches.kernel.org/6.17.8-540-wifi-mt76-mt7996-support-writing-MAC-TXD-for-A.patch
 	patches.kernel.org/6.17.8-541-wifi-mt76-mt76_eeprom_override-to-int.patch
 	patches.kernel.org/6.17.8-542-ALSA-serial-generic-remove-shared-static-buffe.patch
+	patches.kernel.org/6.17.8-543-wifi-mt76-mt7996-fix-memory-leak-on-mt7996_mcu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
