wifi: mt76: mt7921: Add 160MHz beamformee capability for mt7922 device (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1920,6 +1920,7 @@
 	patches.kernel.org/6.17.8-532-net-mana-Reduce-waiting-time-if-HWC-not-respon.patch
 	patches.kernel.org/6.17.8-533-ionic-use-int-type-for-err-in-ionic_get_module.patch
 	patches.kernel.org/6.17.8-534-net-cls_cgroup-Fix-task_get_classid-during-qdi.patch
+	patches.kernel.org/6.17.8-535-wifi-mt76-mt7921-Add-160MHz-beamformee-capabil.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
