net: bridge: Install FDB for bridge MAC on VLAN 0 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2015,6 +2015,7 @@
 	patches.kernel.org/6.17.8-627-NFSv4-handle-ERR_GRACE-on-delegation-recalls.patch
 	patches.kernel.org/6.17.8-628-NFSv4.1-fix-mount-hang-after-CREATE_SESSION-fa.patch
 	patches.kernel.org/6.17.8-629-nfs4_setup_readdir-insufficient-locking-for-d_.patch
+	patches.kernel.org/6.17.8-630-net-bridge-Install-FDB-for-bridge-MAC-on-VLAN-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
