memstick: Add timeout to prevent indefinite waiting (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1513,6 +1513,7 @@
 	patches.kernel.org/6.17.8-125-mmc-sdhci-Disable-SD-card-clock-before-changin.patch
 	patches.kernel.org/6.17.8-126-pinctrl-single-fix-bias-pull-up-down-handling-.patch
 	patches.kernel.org/6.17.8-127-mmc-host-renesas_sdhi-Fix-the-actual-clock.patch
+	patches.kernel.org/6.17.8-128-memstick-Add-timeout-to-prevent-indefinite-wai.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
