ACPI: scan: Update honor list for RPMI System MSI (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2036,6 +2036,7 @@
 	patches.kernel.org/6.17.8-648-ASoC-stm32-sai-manage-context-in-set_sysclk-ca.patch
 	patches.kernel.org/6.17.8-649-amd-amdkfd-enhance-kfd-process-check-in-switch.patch
 	patches.kernel.org/6.17.8-650-ASoC-tlv320aic3x-Fix-class-D-initialization-fo.patch
+	patches.kernel.org/6.17.8-651-ACPI-scan-Update-honor-list-for-RPMI-System-MS.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
