wifi: mt76: mt7925: add pci restore for hibernate (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1921,6 +1921,7 @@
 	patches.kernel.org/6.17.8-533-ionic-use-int-type-for-err-in-ionic_get_module.patch
 	patches.kernel.org/6.17.8-534-net-cls_cgroup-Fix-task_get_classid-during-qdi.patch
 	patches.kernel.org/6.17.8-535-wifi-mt76-mt7921-Add-160MHz-beamformee-capabil.patch
+	patches.kernel.org/6.17.8-536-wifi-mt76-mt7925-add-pci-restore-for-hibernate.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
