--- a/series.conf
+++ b/series.conf
@@ -2104,6 +2104,7 @@
 	patches.kernel.org/6.17.8-716-fbdev-core-Fix-ubsan-warning-in-pixel_to_pat.patch
 	patches.kernel.org/6.17.8-717-ACPI-property-Return-present-device-nodes-only.patch
 	patches.kernel.org/6.17.8-718-LoongArch-Handle-new-atomic-instructions-for-p.patch
+	patches.kernel.org/6.17.8-719-tools-bitmap-Add-missing-asm-generic-bitsperlo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
