--- a/series.conf
+++ b/series.conf
@@ -2097,6 +2097,7 @@
 	patches.kernel.org/6.17.8-709-clk-scmi-Add-duty-cycle-ops-only-when-duty-cyc.patch
 	patches.kernel.org/6.17.8-710-clk-clocking-wizard-Fix-output-clock-register-.patch
 	patches.kernel.org/6.17.8-711-NTB-epf-Allow-arbitrary-BAR-mapping.patch
+	patches.kernel.org/6.17.8-712-9p-fix-sys-fs-9p-caches-overwriting-itself.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
