drm: panel-backlight-quirks: Make EDID match optional (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1813,6 +1813,7 @@
 	patches.kernel.org/6.17.8-425-drm-xe-Extend-Wa_22021007897-to-Xe3-platforms.patch
 	patches.kernel.org/6.17.8-426-wifi-mac80211-count-reg-connection-element-in-.patch
 	patches.kernel.org/6.17.8-427-drm-panthor-check-bo-offset-alignment-in-vm-bi.patch
+	patches.kernel.org/6.17.8-428-drm-panel-backlight-quirks-Make-EDID-match-opt.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
