s390/pci: Use pci_uevent_ers() in PCI recovery (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1683,6 +1683,7 @@
 	patches.kernel.org/6.17.8-295-tty-serial-ip22zilog-Use-platform-device-for-p.patch
 	patches.kernel.org/6.17.8-296-ASoC-es8323-enable-DAPM-power-widgets-for-play.patch
 	patches.kernel.org/6.17.8-297-powerpc-eeh-Use-result-of-error_detected-in-ue.patch
+	patches.kernel.org/6.17.8-298-s390-pci-Use-pci_uevent_ers-in-PCI-recovery.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
