Bluetooth: hci_conn: Fix connection cleanup with BIG with 2 or more BIS (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1449,6 +1449,7 @@
 	patches.kernel.org/6.17.8-061-Bluetooth-MGMT-fix-crash-in-set_mesh_sync-and-.patch
 	patches.kernel.org/6.17.8-062-Bluetooth-ISO-Fix-another-instance-of-dst_type.patch
 	patches.kernel.org/6.17.8-063-Bluetooth-btintel_pcie-Fix-event-packet-loss-i.patch
+	patches.kernel.org/6.17.8-064-Bluetooth-hci_conn-Fix-connection-cleanup-with.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
