usbnet: Prevents free active kevent (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1441,6 +1441,7 @@
 	patches.kernel.org/6.17.8-053-ASoC-fsl_micfil-correct-the-endian-format-for-.patch
 	patches.kernel.org/6.17.8-054-libbpf-Fix-powerpc-s-stack-register-definition.patch
 	patches.kernel.org/6.17.8-055-ASoC-mediatek-Fix-double-pm_runtime_disable-in.patch
+	patches.kernel.org/6.17.8-056-usbnet-Prevents-free-active-kevent.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
