RDMA/hns: Fix wrong WQE data when QP wraps around (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2074,6 +2074,7 @@
 	patches.kernel.org/6.17.8-686-RDMA-uverbs-Fix-umem-release-in-UVERBS_METHOD_.patch
 	patches.kernel.org/6.17.8-687-RDMA-hns-Fix-recv-CQ-and-QP-cache-affinity.patch
 	patches.kernel.org/6.17.8-688-RDMA-hns-Fix-the-modification-of-max_send_sge.patch
+	patches.kernel.org/6.17.8-689-RDMA-hns-Fix-wrong-WQE-data-when-QP-wraps-arou.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
