--- a/series.conf
+++ b/series.conf
@@ -1918,6 +1918,7 @@
 	patches.kernel.org/6.17.8-530-crypto-caam-double-the-entropy-delay-interval-.patch
 	patches.kernel.org/6.17.8-531-can-rcar_canfd-Update-bit-rate-constants-for-R.patch
 	patches.kernel.org/6.17.8-532-net-mana-Reduce-waiting-time-if-HWC-not-respon.patch
+	patches.kernel.org/6.17.8-533-ionic-use-int-type-for-err-in-ionic_get_module.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
