--- a/series.conf
+++ b/series.conf
@@ -2212,6 +2212,7 @@
 	patches.kernel.org/6.17.8-824-drm-amdgpu-smu-Handle-S0ix-for-vangogh.patch
 	patches.kernel.org/6.17.8-825-drm-amd-display-Fix-NULL-deref-in-debugfs-odm_.patch
 	patches.kernel.org/6.17.8-826-drm-amdkfd-Don-t-clear-PT-after-process-killed.patch
+	patches.kernel.org/6.17.8-827-virtio-net-fix-received-length-check-in-big-pa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
