--- a/series.conf
+++ b/series.conf
@@ -1993,6 +1993,7 @@
 	patches.kernel.org/6.17.8-605-sparc-module-Add-R_SPARC_UA64-relocation-handl.patch
 	patches.kernel.org/6.17.8-606-sparc64-fix-prototypes-of-reads-bwl.patch
 	patches.kernel.org/6.17.8-607-vfio-return-ENOTTY-for-unsupported-device-feat.patch
+	patches.kernel.org/6.17.8-608-ptp_ocp-make-ptp_ocp-driver-compatible-with-PT.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
