ixgbe: reduce number of reads when getting OROM data (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1814,6 +1814,7 @@
 	patches.kernel.org/6.17.8-426-wifi-mac80211-count-reg-connection-element-in-.patch
 	patches.kernel.org/6.17.8-427-drm-panthor-check-bo-offset-alignment-in-vm-bi.patch
 	patches.kernel.org/6.17.8-428-drm-panel-backlight-quirks-Make-EDID-match-opt.patch
+	patches.kernel.org/6.17.8-429-ixgbe-reduce-number-of-reads-when-getting-OROM.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
