accel/habanalabs/gaudi2: fix BMON disable configuration (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2019,6 +2019,7 @@
 	patches.kernel.org/6.17.8-631-net-phy-dp83640-improve-phydev-and-driver-remo.patch
 	patches.kernel.org/6.17.8-632-scsi-ufs-core-Change-MCQ-interrupt-enable-flow.patch
 	patches.kernel.org/6.17.8-633-scsi-libfc-Fix-potential-buffer-overflow-in-fc.patch
+	patches.kernel.org/6.17.8-634-accel-habanalabs-gaudi2-fix-BMON-disable-confi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
