--- a/series.conf
+++ b/series.conf
@@ -1926,6 +1926,7 @@
 	patches.kernel.org/6.17.8-538-wifi-mt76-mt7996-Set-def_wcid-pointer-in-mt799.patch
 	patches.kernel.org/6.17.8-539-wifi-mt76-mt7996-Temporarily-disable-EPCS.patch
 	patches.kernel.org/6.17.8-540-wifi-mt76-mt7996-support-writing-MAC-TXD-for-A.patch
+	patches.kernel.org/6.17.8-541-wifi-mt76-mt76_eeprom_override-to-int.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
