--- a/series.conf
+++ b/series.conf
@@ -1640,6 +1640,7 @@
 	patches.kernel.org/6.17.8-252-drm-amdgpu-Initialize-jpeg-v5_0_1-ras-function.patch
 	patches.kernel.org/6.17.8-253-drm-amdgpu-skip-mgpu-fan-boost-for-multi-vf.patch
 	patches.kernel.org/6.17.8-254-drm-amd-display-fix-dmub-access-race-condition.patch
+	patches.kernel.org/6.17.8-255-drm-amd-display-update-dpp-disp-clock-from-smu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
