--- a/series.conf
+++ b/series.conf
@@ -2037,6 +2037,7 @@
 	patches.kernel.org/6.17.8-649-amd-amdkfd-enhance-kfd-process-check-in-switch.patch
 	patches.kernel.org/6.17.8-650-ASoC-tlv320aic3x-Fix-class-D-initialization-fo.patch
 	patches.kernel.org/6.17.8-651-ACPI-scan-Update-honor-list-for-RPMI-System-MS.patch
+	patches.kernel.org/6.17.8-652-platform-x86-x86-android-tablets-Stop-using-EP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
