--- a/series.conf
+++ b/series.conf
@@ -1956,6 +1956,7 @@
 	patches.kernel.org/6.17.8-568-drm-amdgpu-reject-gang-submissions-under-SRIOV.patch
 	patches.kernel.org/6.17.8-569-selftests-Makefile-include-INSTALL_DEP_TARGETS.patch
 	patches.kernel.org/6.17.8-570-scsi-ufs-core-Disable-timestamp-functionality-.patch
+	patches.kernel.org/6.17.8-571-scsi-lpfc-Clean-up-allocated-queues-when-queue.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
