9p/trans_fd: p9_fd_request: kick rx thread if EPOLLIN (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2092,6 +2092,7 @@
 	patches.kernel.org/6.17.8-704-clk-at91-sam9x7-Add-peripheral-clock-id-for-pm.patch
 	patches.kernel.org/6.17.8-705-clk-at91-clk-master-Add-check-for-divide-by-3.patch
 	patches.kernel.org/6.17.8-706-clk-at91-clk-sam9x60-pll-force-write-to-PLL_UP.patch
+	patches.kernel.org/6.17.8-707-9p-trans_fd-p9_fd_request-kick-rx-thread-if-EP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
