drm/amd/display/dml2: Guard dml21_map_dc_state_into_dml_display_cfg with DC_FP_START (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1943,6 +1943,7 @@
 	patches.kernel.org/6.17.8-555-drm-amd-display-Keep-PLL0-running-on-DCE-6.0-a.patch
 	patches.kernel.org/6.17.8-556-drm-amd-display-Fix-DVI-D-HDMI-adapters.patch
 	patches.kernel.org/6.17.8-557-drm-amd-display-Disable-VRR-on-DCE-6.patch
+	patches.kernel.org/6.17.8-558-drm-amd-display-dml2-Guard-dml21_map_dc_state_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
