--- a/series.conf
+++ b/series.conf
@@ -1692,6 +1692,7 @@
 	patches.kernel.org/6.17.8-304-scsi-ufs-host-mediatek-Assign-power-mode-userd.patch
 	patches.kernel.org/6.17.8-305-scsi-ufs-host-mediatek-Change-reset-sequence-f.patch
 	patches.kernel.org/6.17.8-306-scsi-ufs-host-mediatek-Fix-invalid-access-in-v.patch
+	patches.kernel.org/6.17.8-307-gpu-nova-core-register-allow-fields-named-offs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
