--- a/series.conf
+++ b/series.conf
@@ -1743,6 +1743,7 @@
 	patches.kernel.org/6.17.8-355-scsi-mpi3mr-Fix-controller-init-failure-on-fau.patch
 	patches.kernel.org/6.17.8-356-scsi-pm80xx-Fix-race-condition-caused-by-stati.patch
 	patches.kernel.org/6.17.8-357-extcon-adc-jack-Fix-wakeup-source-leaks-on-dev.patch
+	patches.kernel.org/6.17.8-358-extcon-fsa9480-Fix-wakeup-source-leaks-on-devi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
