--- a/series.conf
+++ b/series.conf
@@ -1904,6 +1904,7 @@
 	patches.kernel.org/6.17.8-516-x86-kvm-Prefer-native-qspinlock-for-dedicated-.patch
 	patches.kernel.org/6.17.8-517-x86-virt-tdx-Use-precalculated-TDVPR-page-phys.patch
 	patches.kernel.org/6.17.8-518-selftests-Disable-dad-for-ipv6-in-fcnal-test.s.patch
+	patches.kernel.org/6.17.8-519-eth-8139too-Make-8139TOO_PIO-depend-on-NO_IOPO.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
