--- a/series.conf
+++ b/series.conf
@@ -1602,6 +1602,7 @@
 	patches.kernel.org/6.17.8-214-tools-power-x86_energy_perf_policy-Fix-incorre.patch
 	patches.kernel.org/6.17.8-215-tools-power-x86_energy_perf_policy-Enhance-HWP.patch
 	patches.kernel.org/6.17.8-216-tools-power-x86_energy_perf_policy-Prefer-driv.patch
+	patches.kernel.org/6.17.8-217-mfd-simple-mfd-i2c-Add-compatible-strings-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
