fbdev: pvr2fb: Fix leftover reference to ONCHIP_NR_DMA_CHANNELS (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1403,6 +1403,7 @@
 	patches.kernel.org/6.17.8-015-Bluetooth-rfcomm-fix-modem-control-handling.patch
 	patches.kernel.org/6.17.8-016-net-phy-dp83867-Disable-EEE-support-as-not-imp.patch
 	patches.kernel.org/6.17.8-017-wifi-brcmfmac-fix-crash-while-sending-Action-F.patch
+	patches.kernel.org/6.17.8-018-fbdev-pvr2fb-Fix-leftover-reference-to-ONCHIP_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
