--- a/series.conf
+++ b/series.conf
@@ -2178,6 +2178,7 @@
 	patches.kernel.org/6.17.8-790-net-mlx5e-SHAMPO-Fix-header-mapping-for-64K-pa.patch
 	patches.kernel.org/6.17.8-791-net-mlx5e-SHAMPO-Fix-skb-size-check-for-64K-pa.patch
 	patches.kernel.org/6.17.8-792-net-mlx5e-SHAMPO-Fix-header-formulas-for-highe.patch
+	patches.kernel.org/6.17.8-793-net-wan-framer-pef2256-Switch-to-devm_mfd_add_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
