--- a/series.conf
+++ b/series.conf
@@ -2130,6 +2130,7 @@
 	patches.kernel.org/6.17.8-742-media-uvcvideo-Use-heuristic-to-find-stream-en.patch
 	patches.kernel.org/6.17.8-743-media-videobuf2-forbid-remove_bufs-when-legacy.patch
 	patches.kernel.org/6.17.8-744-drm-mediatek-Disable-AFBC-support-on-Mediatek-.patch
+	patches.kernel.org/6.17.8-745-Revert-wifi-ath10k-avoid-unnecessary-wait-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
