--- a/series.conf
+++ b/series.conf
@@ -1908,6 +1908,7 @@
 	patches.kernel.org/6.17.8-520-PCI-AER-Fix-NULL-pointer-access-by-aer_info.patch
 	patches.kernel.org/6.17.8-521-selftests-Replace-sleep-with-slowwait.patch
 	patches.kernel.org/6.17.8-522-net-devmem-expose-tcp_recvmsg_locked-errors.patch
+	patches.kernel.org/6.17.8-523-selftests-net-lib.sh-Don-t-defer-failed-comman.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
