--- a/series.conf
+++ b/series.conf
@@ -1942,6 +1942,7 @@
 	patches.kernel.org/6.17.8-554-drm-amd-display-Don-t-use-non-registered-VUPDA.patch
 	patches.kernel.org/6.17.8-555-drm-amd-display-Keep-PLL0-running-on-DCE-6.0-a.patch
 	patches.kernel.org/6.17.8-556-drm-amd-display-Fix-DVI-D-HDMI-adapters.patch
+	patches.kernel.org/6.17.8-557-drm-amd-display-Disable-VRR-on-DCE-6.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
