platform/x86: think-lmi: Add extra TC BIOS error messages (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1822,6 +1822,7 @@
 	patches.kernel.org/6.17.8-434-media-adv7180-Only-validate-format-in-querystd.patch
 	patches.kernel.org/6.17.8-435-media-verisilicon-Explicitly-disable-selection.patch
 	patches.kernel.org/6.17.8-436-wifi-mac80211-Fix-6-GHz-Band-capabilities-elem.patch
+	patches.kernel.org/6.17.8-437-platform-x86-think-lmi-Add-extra-TC-BIOS-error.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
