--- a/series.conf
+++ b/series.conf
@@ -1438,6 +1438,7 @@
 	patches.kernel.org/6.17.8-050-ASoC-Intel-avs-Unprepare-a-stream-when-XRUN-oc.patch
 	patches.kernel.org/6.17.8-051-ASoC-Intel-avs-Disable-periods-elapsed-work-wh.patch
 	patches.kernel.org/6.17.8-052-ASoC-fsl_sai-fix-bit-order-for-DSD-format.patch
+	patches.kernel.org/6.17.8-053-ASoC-fsl_micfil-correct-the-endian-format-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
