dm error: mark as DM_TARGET_PASSES_INTEGRITY (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1714,6 +1714,7 @@
 	patches.kernel.org/6.17.8-326-wifi-rtw89-wow-remove-notify-during-WoWLAN-net.patch
 	patches.kernel.org/6.17.8-327-wifi-rtw89-fix-BSSID-comparison-for-non-transm.patch
 	patches.kernel.org/6.17.8-328-wifi-rtw89-8851b-rfk-update-IQK-TIA-setting.patch
+	patches.kernel.org/6.17.8-329-dm-error-mark-as-DM_TARGET_PASSES_INTEGRITY.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
