Bluetooth: btusb: Add new VID/PID 13d3/3633 for MT7922 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2050,6 +2050,7 @@
 	patches.kernel.org/6.17.8-662-Bluetooth-btusb-Check-for-unexpected-bytes-whe.patch
 	patches.kernel.org/6.17.8-663-Bluetooth-ISO-Use-sk_sndtimeo-as-conn_timeout.patch
 	patches.kernel.org/6.17.8-664-Bluetooth-SCO-Fix-UAF-on-sco_conn_free.patch
+	patches.kernel.org/6.17.8-665-Bluetooth-btusb-Add-new-VID-PID-13d3-3633-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
