--- a/series.conf
+++ b/series.conf
@@ -1581,6 +1581,7 @@
 	patches.kernel.org/6.17.8-193-cpuidle-Fail-cpuidle-device-registration-if-th.patch
 	patches.kernel.org/6.17.8-194-futex-Don-t-leak-robust_list-pointer-on-exec-r.patch
 	patches.kernel.org/6.17.8-195-selftests-bpf-Fix-selftest-verifier_arena_larg.patch
+	patches.kernel.org/6.17.8-196-selftests-ublk-fix-behavior-when-fio-is-not-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
