Bluetooth: hci_sync: fix race in hci_cmd_sync_dequeue_once (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1442,6 +1442,7 @@
 	patches.kernel.org/6.17.8-054-libbpf-Fix-powerpc-s-stack-register-definition.patch
 	patches.kernel.org/6.17.8-055-ASoC-mediatek-Fix-double-pm_runtime_disable-in.patch
 	patches.kernel.org/6.17.8-056-usbnet-Prevents-free-active-kevent.patch
+	patches.kernel.org/6.17.8-057-Bluetooth-hci_sync-fix-race-in-hci_cmd_sync_de.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
